# Website-Testing-Automation-Tool

./: .gitignore  README.md  USAGE.md  gui_server.py  pyproject.toml  requirements.txt  task.md  walkthrough-Phase-11
crawler/agent/: __init__.py  executor.py  graph.py
crawler/browser/: browser_manager.py  page_manager.py
crawler/cache/: __init__.py  state_cache.py
crawler/duplicate_detection/: __init__.py  cluster_manager.py  dom_hasher.py  url_normalizer.py
crawler/embeddings/: __init__.py  embedder.py  indexer.py  vector_store.py
crawler/explorer/: __init__.py  graph_manager.py  models.py  navigator.py
crawler/extractor/: __init__.py  dom_extractor.py  html_parser.py  models.py
crawler/forms/: __init__.py  analyzer.py  models.py
crawler/vision/: __init__.py  llm_client.py  recovery_agent.py  screenshotter.py
crawler/workflow/: __init__.py  extractor.py  models.py
docs/: architecture.md  changelog.md  coding_standards.md  data_schema.md  decisions.md  implementation_plan.txt  new_website_guide.md  roadmap.md  testing_strategy.md
docs/prompts/: agent_prompt.md  crawler_prompt.md
examples/: demo_agent.py  demo_browser.py  demo_duplicate.py  demo_embeddings.py  demo_explorer.py  demo_extractor.py  demo_forms.py  demo_incremental.py  demo_vision.py  run_real_site.py
shared/: logger.py
static/: index.html
tests/crawler/agent/: test_agent.py
tests/crawler/cache/: test_cache.py
tests/crawler/duplicate_detection/: test_dom_hasher.py  test_url_normalizer.py
tests/crawler/embeddings/: test_vector_store.py
(+7 files in other folders)
